@@ -1,5 +1,16 @@
 2010-01-29  Joel Brobecker  <brobecker@adacore.com>
 
+	amd64-windows: 32 bytes allocated on stack by caller for integer
+	parameter registers
+	* i386-tdep.h (struct gdbarch_tdep): Add new field
+	integer_param_regs_saved_in_caller_frame.
+	* amd64-windows-tdep.c (amd64_windows_init_abi): Set
+	tdep->integer_param_regs_saved_in_caller_frame to 1.
+	* amd64-tdep.c (amd64_push_dummy_call): Allocate some memory on
+	stack if tdep->integer_param_regs_saved_in_caller_frame is set.
+
+2010-01-29  Joel Brobecker  <brobecker@adacore.com>
+
 	amd64-windows: memory args passed by pointer during function calls.
 	* i386-tdep.h (gdbarch_tdep): Add field memory_args_by_pointer.
 	* amd64-tdep.c (amd64_push_arguments): Add handling of architectures
